app/globals.css
@import "tailwindcss";

html, body {
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden !important;
  background-color: #F5F0F2;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 6px;
}
.custom-scrollbar::-webkit-scrollbar-track {
  background: transparent;
}
.custom-scrollbar::-webkit-scrollbar-thumb {
  background: #e9aab2;
  border-radius: 10px;
}
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

